# sema

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: default.toml  embedding_models.toml
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs
src/config/: mod.rs
src/crawler/: mod.rs
src/embeddings/: mod.rs
src/search/: mod.rs
src/semantic/: embeddings.rs  index.rs  search.rs
src/storage/: lance_indexer.rs  mod.rs  processor.rs  service.rs  text_indexer.rs
src/tui/: app.rs  engine.rs  events.rs  mod.rs  ui.rs
src/tui/components/: colors.rs  file_list.rs  file_preview.rs  mod.rs  search_input.rs  search_results.rs
src/tui/events/: mod.rs
src/tui/handlers/: keyboard.rs
src/tui/state/: mod.rs
src/tui/ui/: mod.rs
src/tui/ui/components/: mod.rs
src/tui/ui/screens/: mod.rs
src/tui/utils/: mod.rs  spinner.rs
src/types/: mod.rs
src/utils/: mod.rs
src/vector_db/: mod.rs
