[package]
name = "sema"
version = "0.1.0"
edition = "2024"

[dependencies]
# Terminal User Interface
ratatui = "0.29.0"
crossterm = "0.29"
tui-input = "0.12.1"
tui-textarea = "0.7.0"

# Async runtime and utilities
tokio = "1.45.1"
tokio-util = "0.7.15"
futures = "0.3.31"
parking_lot = "0.12.4"

# File system operations
walkdir = "2.5.0"
mime_guess = "2.0.5"
mime = "0.3.17"
ignore = "0.4.23"
sha2 = "0.10.9"
num_cpus = "1.17.0"

# Text processing
regex = "1.11.1"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }

# Fast hashing
blake3 = "1.8.2"

# Vector database
qdrant-client = "1.14.0"

# Embedding generation (local models)
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
tokenizers = "0.21.1"
hf-hub = "0.4.2"

# Syntax highlighting for file previews
syntect = "5.2.0"

# Configuration management
serde = "1.0.219"
serde_json = "1.0.140"
toml = "0.8.22"
config = "0.15.11"
dirs = "6.0.0"

# Command line interface
clap = { version = "4.5.39", features = ["derive"] }

# Progress indication
indicatif = "0.17.11"
console = "0.15.11"

# Error handling and utilities
anyhow = "1.0.98"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }

# Performance utilities
rayon = "1.10.0"
dashmap = "6.1.0"
