[package]
name = "sema"
version = "0.1.0"
edition = "2024"

[dependencies]
# Terminal User Interface
ratatui = "0.29.0"
tui-input = "0.14.0"
tui-textarea = "0.7.0"

# Async runtime and utilities
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.15"
futures = "0.3.31"
parking_lot = "0.12.4"

# File system operations
walkdir = "2.5.0"
mime_guess = "2.0.5"
mime = "0.3.17"
ignore = "0.4.23"
sha2 = "0.10.9"
num_cpus = "1.17.0"

# Text processing
regex = "1.11.1"
unicode-segmentation = "1.12.0"

# Database
bincode = "2.0.1"

# Full text search
tantivy = "0.25.0"

# Fast hashing
blake3 = "1.8.2"

# Syntax highlighting for file previews
syntect = "5.2.0"

# Configuration management
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.9.5"
dirs = "6.0.0"

# Command line interface
clap = { version = "4.5.45", features = ["derive"] }

# Error handling and utilities
anyhow = "1.0.99"
thiserror = "2.0.16"

# Performance utilities
rayon = "1.11.0"

# Semantic search
ort = "2.0.0-rc.10"
lancedb = "0.21.3"
arrow = "55.2.0"
arrow-array = "55.2.0"
arrow-schema = "55.2.0"
hf-hub = "0.4.3"
tokenizers = "0.21.4"
ndarray = "0.16.1"
