[package]
name = "sema"
version = "0.1.0"
edition = "2024"

[dependencies]
# Terminal User Interface
ratatui = "0.29.0"
tui-input = "0.14.0"
tui-textarea = "0.7.0"

# Async runtime and utilities
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.15"
futures = "0.3.31"

# File system operations
walkdir = "2.5.0"
ignore = "0.4.23"
num_cpus = "1.17.0"
rayon = "1.10.0"

# Text processing
regex = "1.11.1"
unicode-segmentation = "1.12.0"

# Full text search
tantivy = "0.25.0"

# Fast hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Syntax highlighting for file previews
syntect = "5.2.0"

# Configuration management
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.9.5"
dirs = "6.0.0"

# Command line interface
clap = { version = "4.5.45", features = ["derive"] }

# Error handling and utilities
anyhow = "1.0.99"
thiserror = "2.0.16"

# Semantic search
ort = "2.0.0-rc.10"
lancedb = "0.23.0"
arrow = "56.2.0"
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
hf-hub = "0.4.3"
tokenizers = "0.22.2"
ndarray = "0.17.1"
